--- a/doc/guide.tex
+++ b/doc/guide.tex
@@ -56,6 +56,28 @@ s.t. & \quad x_{n+1} = A_n x_n + B_n u_n + b_n & \quad n=0,\dots,N-1 \\
 & \quad \begin{bmatrix} \underline u_n \\ \underline x_n \\ \underline d_n \end{bmatrix} \leq \begin{bmatrix} J_{u,n} & 0 \\ 0 & J_{x,n} \\ D_n & C_n \end{bmatrix} \begin{bmatrix} u_n \\ x_n \end{bmatrix} + \begin{bmatrix} J_{s^l,u,n} \\ J_{s^l,x,n} \\ J_{s^l,g,n} \end{bmatrix} s^l_n & \quad n=0.\dots,N \\
 & \quad \begin{bmatrix} J_{u,n} & 0 \\ 0 & J_{x,n} \\ D_n & C_n \end{bmatrix} \begin{bmatrix} u_n \\ x_n \end{bmatrix} - \begin{bmatrix} J_{s^u,u,n} \\ J_{s^u,x,n} \\ J_{s^u,g,n} \end{bmatrix} s^u_n \leq \begin{bmatrix} \overline u_n \\ \overline x_n \\ \overline d_n \end{bmatrix} & \quad n=0.\dots,N
 \end{align*}
+where $u_n$ are the control inputs, $x_n$ are the states, $s^l_n$ ($s^u_n$) are the slack variables of the soft lower (upper) constraints.
+The matrices $J_{\dots,n}$ are made of rows from identity matrices.
+Note that all quantities can vary stage-wise.
+Furthermore, note that the constraint matrix with respect to $u$ and $x$ is the same for the upper and the lower constraints.
+
+\begin{verbatim}
+int d_memsize_ocp_qp(int N, int *nx, int *nu, int *nb, int *ng, int *ns);
+\end{verbatim}
+
+\begin{verbatim}
+void d_create_ocp_qp(int N, int *nx, int *nu, int *nb, int *ng, int *ns, 
+    struct d_ocp_qp *qp, void *memory);
+\end{verbatim}
+
+\begin{verbatim}
+void d_cvt_colmaj_to_ocp_qp(double **A, double **B, double **b, 
+    double **Q, double **S, double **R, double **q, double **r, 
+    int **idxb, double **lb, double **ub, 
+    double **C, double **D, double **lg, double **ug, 
+    double **Zl, double **Zu, double **zl, double **zu, int **idxs, 
+    struct d_ocp_qp *qp);
+\end{verbatim}
 
 
 
