--- a/doc/guide.tex
+++ b/doc/guide.tex
@@ -67,10 +67,11 @@ The OCP QP is a QP in the form
 s.t. & \quad x_{n+1} = A_n x_n + B_n u_n + b_n & \quad n=0,\dots,N-1 \\
 & \quad \begin{bmatrix} \underline u_n \\ \underline x_n \\ \underline d_n \end{bmatrix} \leq \begin{bmatrix} J_{b,u,n} & 0 \\ 0 & J_{b,x,n} \\ D_n & C_n \end{bmatrix} \begin{bmatrix} u_n \\ x_n \end{bmatrix} + \begin{bmatrix} J_{s,u,n} \\ J_{s,x,n} \\ J_{s,g,n} \end{bmatrix} s^l_n & \quad n=0.\dots,N \\
 & \quad \begin{bmatrix} J_{b,u,n} & 0 \\ 0 & J_{b,x,n} \\ D_n & C_n \end{bmatrix} \begin{bmatrix} u_n \\ x_n \end{bmatrix} - \begin{bmatrix} J_{s,u,n} \\ J_{s,x,n} \\ J_{s,g,n} \end{bmatrix} s^u_n \leq \begin{bmatrix} \overline u_n \\ \overline x_n \\ \overline d_n \end{bmatrix} & \quad n=0.\dots,N \\
-& \quad s^l\geq 0 & \quad n=0.\dots,N \\
-& \quad s^u\geq 0 & \quad n=0.\dots,N
+& \quad s^l_n\geq \underline{s}^l_n & \quad n=0.\dots,N \\
+& \quad s^u_n\geq \underline{s}^u_n & \quad n=0.\dots,N
 \end{align*}
-where $u_n$ are the control inputs, $x_n$ are the states, $s^l_n$ ($s^u_n$) are the slack variables of the soft lower (upper) constraints.
+where $u_n$ are the control inputs, $x_n$ are the states, $s^l_n$ ($s^u_n$) are the slack variables of the soft lower (upper) constraints
+and $\underline{s}^l_n$ and $\underline{s}^u_n$ are the lower bounds on lower and upper slacks, respectively.
 The matrices $J_{\dots,n}$ are made of rows from identity matrices.
 Note that all quantities can vary stage-wise.
 Furthermore, note that the constraint matrix with respect to $u$ and $x$ is the same for the upper and the lower constraints.
@@ -90,13 +91,14 @@ void d_cvt_colmaj_to_ocp_qp(double **A, double **B, double **b,
     int **idxb, double **lb, double **ub, 
     double **C, double **D, double **lg, double **ug, 
     double **Zl, double **Zu, double **zl, double **zu, int **idxs, 
+    double **ls, double **us,
     struct d_ocp_qp *qp);
 \end{verbatim}
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Tree OCP QP}
+% \chapter{Tree OCP QP}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
