--- a/doc/guide.tex
+++ b/doc/guide.tex
@@ -88,7 +88,8 @@ void d_create_ocp_qp(int N, int *nx, int *nu, int *nb, int *ng, int *ns,
 \begin{verbatim}
 void d_cvt_colmaj_to_ocp_qp(double **A, double **B, double **b, 
     double **Q, double **S, double **R, double **q, double **r, 
-    int **idxb, double **lb, double **ub, 
+    int **idxbx, double **lbx, double **ubx, 
+    int **idxbu, double **lbu, double **ubu, 
     double **C, double **D, double **lg, double **ug, 
     double **Zl, double **Zu, double **zl, double **zu, int **idxs, 
     double **ls, double **us,
