--- a/doc/guide.tex
+++ b/doc/guide.tex
@@ -56,6 +56,7 @@ The matrices $J_{\dots}$ are made of rows from identity matrices.
 Furthermore, note that the constraint matrix with respect to $v$ is the same for the upper and the lower constraints.
 
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{OCP QP}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -76,26 +77,65 @@ The matrices $J_{\dots,n}$ are made of rows from identity matrices.
 Note that all quantities can vary stage-wise.
 Furthermore, note that the constraint matrix with respect to $u$ and $x$ is the same for the upper and the lower constraints.
 
+%%%%%%%%%%%%%%%%
+\section{QP dimensions structure}
+%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%
+\subsection{Create structure}
+%%%%%%%%%%%%%%%%
+
 \begin{verbatim}
-int d_memsize_ocp_qp(int N, int *nx, int *nu, int *nb, int *ng, int *ns);
+int d_memsize_ocp_qp_dim(int N);
 \end{verbatim}
 
 \begin{verbatim}
-void d_create_ocp_qp(int N, int *nx, int *nu, int *nb, int *ng, int *ns, 
-    struct d_ocp_qp *qp, void *memory);
+void d_create_ocp_qp_dim(int N, struct d_ocp_qp *qp, void *memory);
 \end{verbatim}
 
+%%%%%%%%%%%%%%%%
+\subsection{Populate structure}
+%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%
+\section{QP structure}
+%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%
+\subsection{Create structure}
+%%%%%%%%%%%%%%%%
+
+\begin{verbatim}
+int d_memsize_ocp_qp(struct d_ocp_qp_dim *dim);
+\end{verbatim}
+
+\begin{verbatim}
+void d_create_ocp_qp(struct d_ocp_qp_dim *dim, struct d_ocp_qp *qp, void *memory);
+\end{verbatim}
+
+%%%%%%%%%%%%%%%%
+\subsection{Populate structure}
+%%%%%%%%%%%%%%%%
+
+Once created, an OCP QP can be populated using the global conversion routine
 \begin{verbatim}
 void d_cvt_colmaj_to_ocp_qp(double **A, double **B, double **b, 
     double **Q, double **S, double **R, double **q, double **r, 
     int **idxbx, double **lbx, double **ubx, 
     int **idxbu, double **lbu, double **ubu, 
     double **C, double **D, double **lg, double **ug, 
-    double **Zl, double **Zu, double **zl, double **zu, int **idxs, 
-    double **ls, double **us,
+    double **Zl, double **Zu, double **zl, double **zu, 
+    int **idxs, double **lls, double **lus,
     struct d_ocp_qp *qp);
 \end{verbatim}
+which is useful when all the QP fileds have to be populated at once.
 
+Alternatively, it is possible to set the individual QP fields with the setter routine
+\begin{verbatim}
+void d_cvt_colmaj_gen_to_ocp_qp(char *field, int *stage, void *value,
+    struct d_ocp_qp *qp);
+\end{verbatim}
+where {\tt filed} can take the values {\tt A, B, b, Q, S, R, q, r, idxb, lb, ub, Jx, idxbx, lbx, ubx, Ju, idxbu, lbu, ubu, C, D, lg, ug, Zl, Zu, zl, zu, idxs, lls, lus}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
