--- a/doc/guide.tex
+++ b/doc/guide.tex
@@ -86,16 +86,32 @@ Furthermore, note that the constraint matrix with respect to $u$ and $x$ is the 
 %%%%%%%%%%%%%%%%
 
 \begin{verbatim}
-int d_memsize_ocp_qp_dim(int N);
+int d_ocp_qp_dim_memsize(int N);
 \end{verbatim}
 
 \begin{verbatim}
-void d_create_ocp_qp_dim(int N, struct d_ocp_qp *qp, void *memory);
+void d_ocp_qp_dim_create(int N, struct d_ocp_qp *qp, void *memory);
 \end{verbatim}
 
 %%%%%%%%%%%%%%%%
 \subsection{Populate structure}
 %%%%%%%%%%%%%%%%
+
+Once created, an OCP QP dimmensions structure can be populated using the global setter routine
+\begin{verbatim}
+void d_ocp_qp_dim_set_all(int *nx, int *nu,
+    int *nbx, int *nbu, int *ng,
+    int *nsbx, int *nsbu, int *nsg,
+    struct d_ocp_qp_dim *dim);
+\end{verbatim}
+which is useful when all structure fields have to be populated at onece.
+
+Alternatively, it is possible to set the individual structure fields with the setter routine
+\begin{verbatim}
+void d_ocp_qp_dim_set(char *field, int *stage, int value,
+    struct d_ocp_qp_dim *dim);
+\end{verbatim}
+where {\tt field} can be one of {\tt nx, nu, nbx, nbu, ng, nsbx, nsbu, nsg}.
 
 %%%%%%%%%%%%%%%%
 \section{QP structure}
@@ -117,7 +133,7 @@ void d_create_ocp_qp(struct d_ocp_qp_dim *dim, struct d_ocp_qp *qp, void *memory
 \subsection{Populate structure}
 %%%%%%%%%%%%%%%%
 
-Once created, an OCP QP can be populated using the global conversion routine
+Once created, an OCP QP structure can be populated using the global conversion routine
 \begin{verbatim}
 void d_cvt_colmaj_to_ocp_qp(double **A, double **B, double **b, 
     double **Q, double **S, double **R, double **q, double **r, 
@@ -128,14 +144,14 @@ void d_cvt_colmaj_to_ocp_qp(double **A, double **B, double **b,
     int **idxs, double **lls, double **lus,
     struct d_ocp_qp *qp);
 \end{verbatim}
-which is useful when all the QP fileds have to be populated at once.
+which is useful when all the structure fileds have to be populated at once.
 
-Alternatively, it is possible to set the individual QP fields with the setter routine
+Alternatively, it is possible to set the individual structure fields with the setter routine
 \begin{verbatim}
 void d_cvt_colmaj_gen_to_ocp_qp(char *field, int *stage, void *value,
     struct d_ocp_qp *qp);
 \end{verbatim}
-where {\tt filed} can take the values {\tt A, B, b, Q, S, R, q, r, idxb, lb, ub, Jx, idxbx, lbx, ubx, Ju, idxbu, lbu, ubu, C, D, lg, ug, Zl, Zu, zl, zu, idxs, lls, lus}.
+where {\tt filed} can be one of {\tt A, B, b, Q, S, R, q, r, idxb, lb, ub, Jx, idxbx, lbx, ubx, Ju, idxbu, lbu, ubu, C, D, lg, ug, Zl, Zu, zl, zu, idxs, lls, lus}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
