--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,7 +3,7 @@ HPIPM ChangeLog
 
 
 ====================================================================
-Version 0.1.1-dev
+Version 0.1.1-master
 18-Jul-2019
 
 ocp_qp:
