--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,7 +4,7 @@ HPIPM ChangeLog
 
 ====================================================================
 Version 0.1.2-master
-21-Nov-2019
+12-Feb-2020
 
 dense_qp:
 	* add mask to disregard constraints (e.g. for one sided constr, or dynamic constr removal)
@@ -20,6 +20,7 @@ ocp_qcqp:
 
 Matlab/Octave interface:
 	* add option to build QP data and args reading from codegen data files
+	* add ocp qcqp interface with same functionality as the ocp qp one
 
 simulink interface:
 	* add a simulink interface based on a basic s-function
